--- a/src/app/main/apps/e-commerce/product/form-custom/form-custom.component.scss
+++ b/src/app/main/apps/e-commerce/product/form-custom/form-custom.component.scss
@@ -205,7 +205,7 @@
 
     
     @include media-breakpoint('xs') {
-        padding: 0px 0px;
+        padding: 0px 30px 0px 0px;
       }
   
   
@@ -260,10 +260,6 @@
                 0 4px 5px 1px rgba(0, 0, 0, 0.14),
                 0 3px 8px 1px rgba(0, 0, 0, 0.12);
 
-
-                @include media-breakpoint('xs') {
-                    padding:   12px  12px 0px 12px
-                  }
               
               
 
