--- a/src/app/layout/components/navbar/vertical/style-1/style-1.component.html
+++ b/src/app/layout/components/navbar/vertical/style-1/style-1.component.html
@@ -2,7 +2,7 @@
 
     <div class="logo">
         <img class="logo-icon" src="assets/images/logos/turevento.png">
-        <span class="logo-text secondary-text">TUREVENTO.NET</span>
+        <span class="logo-text secondary-text">TUREVENTO.NET V2.0</span>
     </div>
 
     <div class="buttons">
