--- a/src/app/main/apps/contacts/contact-form/contact-form.component.scss
+++ b/src/app/main/apps/contacts/contact-form/contact-form.component.scss
@@ -56,3 +56,15 @@
     }
 
 }
+
+.mat-form-field-infix {
+
+    width: 350px !important;
+
+
+    @include media-breakpoint('xs') {
+        width: 118px !important;
+    }
+
+ 
+}
