--- a/src/app/main/apps/e-commerce/product/form-custom/form-custom.component.html
+++ b/src/app/main/apps/e-commerce/product/form-custom/form-custom.component.html
@@ -1,7 +1,7 @@
 <div class="page-layout carded left-sidebar inner-scroll">
 
     <!-- TOP BACKGROUND -->
-    <div class="top-bg accent"></div>
+    <div class="top-bg-form accent"></div>
     <!-- / TOP BACKGROUND -->
 
     <!-- SIDEBAR -->
@@ -69,7 +69,7 @@
 
                             <div class="item-field" *ngFor="let f of _formCustomService.formDataFieldsInputs.controls; index as i" 
                             [formGroupName]="i"
-                            [@animate]="{value:'*',params:{x:'100%'}}"
+                          
                             cdkDrag>
 
                             <div fxLayout="row" fxLayoutAlign="start center" >
