--- a/src/app/main/apps/contacts/contact-form/contact-form.component.html
+++ b/src/app/main/apps/contacts/contact-form/contact-form.component.html
@@ -15,7 +15,7 @@
 
 
     <!-- CONTENT -->
-    <div class="content p-24">
+    <div class="content p-24" *ngIf="loadInputs">
 
 
         <div mat-dialog-content class="mb-24" fxLayout="column" fxLayoutAlign="start" fxLayout.gt-md="row" fusePerfectScrollbar>
@@ -25,54 +25,44 @@
             <form class="p-24 mr-24" fxLayout="column" fxLayoutAlign="start"
                   fxFlex="1 0 auto" name="form" [formGroup]="contactForm">
 
+                  <div fxLayout="row" fxLayoutAlign="start" fxFlex="0 0 auto">
 
-                <div fxLayout="row" fxLayoutAlign="start center" fxFlex="1 0 auto">
-                    <mat-form-field appearance="outline" fxFlex="50" class="pr-4">
-                        <mat-label>Correo Electrónico</mat-label>
+                  <section formArrayName="inputsFormContact">
+
+                  <span *ngFor="let f of formDataInputs.controls; index as i" [formGroupName]="i">
+            
+                    <mat-form-field appearance="outline" fxFlex="150" class="pr-4">
+                        <mat-label *ngIf="f.value.required">{{ f.value.title }} *</mat-label>
+
+                        <mat-label *ngIf="!f.value.required">{{ f.value.title }} </mat-label>
                         <mat-icon matSuffix class="secondary-text">email</mat-icon>
-                        <input name="email" formControlName="email" matInput type="email">
+                        <input name="email" formControlName="value" matInput [type]="f.value.type">
                     </mat-form-field>
 
-                    <mat-form-field appearance="outline" fxFlex="50" class="pr-4">
-                        <mat-label>Titulo</mat-label>
-                        <mat-icon matSuffix class="secondary-text">account_circle</mat-icon>
-                        <input name="title" formControlName="title" matInput>
-                    </mat-form-field>
+                </span>
+                  </section>
 
-                </div>
 
-                <div fxLayout="row" fxLayoutAlign="start center" fxFlex="1 0 auto">
+           
+            <section formArrayName="inputsFormContact2">
 
-                    <mat-form-field appearance="outline" fxFlex="50" class="pr-4">
-                        <mat-label>Nombre</mat-label>
-                        <mat-icon matSuffix class="secondary-text">account_circle</mat-icon>
-                        <input name="name" formControlName="name" matInput>
-                    </mat-form-field>
+                <span *ngFor="let f of formDataInputs2.controls; index as i" [formGroupName]="i">
+                    
+                  <mat-form-field appearance="outline" fxFlex="150" class="pr-4">
+                      <mat-label *ngIf="f.value.required">{{ f.value.title }} *</mat-label>
 
-                    <mat-form-field appearance="outline" fxFlex="50" class="pr-4">
-                        <mat-label>Apellidos</mat-label>
-                        <mat-icon matSuffix class="secondary-text">account_circle</mat-icon>
-                        <input name="lastname" formControlName="lastname" matInput>
-                    </mat-form-field>
+                      <mat-label *ngIf="!f.value.required">{{ f.value.title }} </mat-label>
+                      <mat-icon matSuffix class="secondary-text">email</mat-icon>
+                      <input name="email" formControlName="value" matInput [type]="f.value.type">
+                  </mat-form-field>
 
-                </div>
+                </span>
+            </section>
 
-                <div fxLayout="row" fxLayoutAlign="start center" fxFlex="1 0 auto">
 
-                    <mat-form-field appearance="outline" fxFlex="50" class="pr-4">
-                        <mat-label>Teléfono de Contacto</mat-label>
-                        <mat-icon matSuffix class="secondary-text">phone</mat-icon>
-                        <input formControlName="phone" matInput>
-                    </mat-form-field>
+          </div>
 
-                    <mat-form-field appearance="outline" fxFlex="50" class="pr-4">
-                        <mat-label>Teléfono Móvil</mat-label>
-                        <mat-icon matSuffix class="secondary-text">phone</mat-icon>
-                        <input formControlName="phoneMobil" matInput>
-                    </mat-form-field>
-
-                </div>
-
+            
 
                 <div fxLayout="row wrap" fxLayoutAlign="start center" fxFlex="1 0 auto">
 
@@ -100,48 +90,6 @@
 
                 
 
-                <div fxLayout="row" fxLayoutAlign="start center" fxFlex="1 0 auto">
-                    <mat-form-field appearance="outline" fxFlex="50" class="pr-4">
-                        <mat-label>Empresa / Institución</mat-label>
-                        <mat-icon matSuffix class="secondary-text">domain</mat-icon>
-                        <input name="company" formControlName="company" matInput>
-                    </mat-form-field>
-                    
-                    <mat-form-field appearance="outline" fxFlex="50" class="pr-4">
-                        <mat-label>Cargo</mat-label>
-                        <mat-icon matSuffix class="secondary-text">work</mat-icon>
-                        <input name="jobtitle" formControlName="jobtitle" matInput>
-                    </mat-form-field>
-
-                </div>
-
-                <div fxLayout="row" fxLayoutAlign="start center" fxFlex="1 0 auto">
-                    <mat-form-field appearance="outline" fxFlex="50" class="pr-4">
-                        <mat-label>Dirección</mat-label>
-                        <mat-icon matSuffix class="secondary-text">home</mat-icon>
-                        <input name="address" formControlName="address" matInput>
-                    </mat-form-field>
-                    
-                    <mat-form-field appearance="outline" fxFlex="50" class="pr-4">
-                        <mat-label>Comuna</mat-label>
-                        <input name="street" formControlName="street" matInput>
-                    </mat-form-field>
-
-                </div>
-
-                
-                <div fxLayout="row" fxLayoutAlign="start center" fxFlex="1 0 auto">
-                    <mat-form-field appearance="outline" fxFlex="50" class="pr-4">
-                        <mat-label>Ciudad</mat-label>
-                        <input name="city" formControlName="city" matInput>
-                    </mat-form-field>
-                    
-                    <mat-form-field appearance="outline" fxFlex="50" class="pr-4">
-                        <mat-label>País</mat-label>
-                        <input name="country" formControlName="country" matInput>
-                    </mat-form-field>
-
-                </div>
 
                 <div fxLayout="row wrap" fxLayoutAlign="start center" fxFlex="1 0 auto">
                     <mat-form-field appearance="outline" fxFlex="100">
@@ -152,7 +100,7 @@
                 </div>
 
       
-
+ 
             </form>
 
 
@@ -173,7 +121,7 @@
         <button *ngIf="action === 'edit'"
         mat-button
         class="mr-8"
-        (click)="matDialogRef.close(['duplicate',contactForm])"
+        (click)="matDialogRef.close(['duplicate', contactForm])"
         aria-label="Duplicate"
         matTooltip="Duplica invitado">
         DUPLICAR
