--- a/src/app/main/apps/contacts/contact-form/contact-form.component.scss
+++ b/src/app/main/apps/contacts/contact-form/contact-form.component.scss
@@ -59,7 +59,7 @@
 
 .mat-form-field-infix {
 
-    width: 350px !important;
+    width: auto;
 
 
     @include media-breakpoint('xs') {
@@ -67,4 +67,9 @@
     }
 
  
+}
+
+.array-inputs {
+
+    width: 50%;
 }
